modified the stylesheet

--- a/space.html
+++ b/space.html
@@ -14,11 +14,12 @@
 <div class="container">
     <h1 class="heading">
         HUBBLE SPACE TELESCOPE
-    </h1> <br><br><br><br>
-    <span class="note">
+    </h1>
+    <p class="note">
         30 Years of Discovery
-    </span>
+    </p>
 </div>
 
 </body>
 </html>
+
